--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="{% static 'baseproject/css/export_sm_modal.css' %}">
   <link rel="stylesheet" href="{% static 'baseproject/css/bbox_qc_tab.css' %}"> 
   <link rel="stylesheet" href="{% static 'baseproject/css/selected_dsr_qc_tab.css' %}">
+  <link rel="stylesheet" href="{% static 'baseproject/css/dsr_single_line_table.css' %}">
   
 
   <link href="https://cdn.bokeh.org/bokeh/release/bokeh-3.8.2.min.css" rel="stylesheet">
