--- a/core/templates/projects/settings.html
+++ b/core/templates/projects/settings.html
@@ -235,6 +235,16 @@
                     <input type="number" step="1" name="gnss_fixed_quality" class="form-control"
                            value="{{ node_qc.gnss_fixed_quality }}">
                   </div>
+                  <div class="col-md-4">
+                    <label class="form-label">MAX SMA</label>
+                    <input  name="max_sma" class="form-control"
+                           value="{{ node_qc.max_sma }}">
+                  </div>
+                  <div class="col-md-4">
+                    <label class="form-label">WARNING SMA</label>
+                    <input  name="warning_sma" class="form-control"
+                           value="{{ node_qc.warning_sma }}">
+                  </div>
                 </div>
               </div>
 
