--- a/rov/templates/rov/rovpage.html
+++ b/rov/templates/rov/rovpage.html
@@ -129,7 +129,10 @@
                       {% include "rov/partials/bbox_file_selected_plots.html" %}
                   </div>
                   <div class="tab-pane fade" id="pills-line" role="tabpanel" aria-labelledby="pills-line-tab">
-                      {% include "rov/partials/selected_line_qc_tabs.html" %}
+                      <div id="dsr-qc-root"
+                            data-plot-item-url="{% url 'dsr_line_qc_plot_item' %}">
+                            {% include "rov/partials/selected_line_qc_tabs.html" %}
+                      </div>
                   </div>
             </div>
         </div><!--End of right col-->
