--- a/baseproject/templates/baseproject/preplot_right_panel.html
+++ b/baseproject/templates/baseproject/preplot_right_panel.html
@@ -67,7 +67,9 @@
                      <div class="tab-pane fade" id="pills-shapes-page" role="tabpanel" aria-labelledby="pills-shapes-tab" tabindex="0">
                          {% include "baseproject/partials/shapes.html" %}
                      </div>
-                     <div class="tab-pane fade" id="pills-vessels-page" role="tabpanel" aria-labelledby="pills-vessels-tab" tabindex="0">...</div>
+                     <div class="tab-pane fade" id="pills-vessels-page" role="tabpanel" aria-labelledby="pills-vessels-tab" tabindex="0">
+                         {%  include 'baseproject/partials/project_fleet_panel.html' %}
+                     </div>
                      <div class="tab-pane fade" id="rl-points-page" role="tabpanel" aria-labelledby="rl-points-tab" tabindex="0">
                          <div class="clearfix">
                              <button class="btn btn-danger float-end me-2"
