--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="{% static 'baseproject/css/bbox_qc_tab.css' %}"> 
   <link rel="stylesheet" href="{% static 'baseproject/css/selected_dsr_qc_tab.css' %}">
   <link rel="stylesheet" href="{% static 'baseproject/css/dsr_single_line_table.css' %}">
+  <link rel="stylesheet" href="{% static 'baseproject/css/members.css' %}">
+  <link rel="stylesheet" href="{% static 'baseproject/css/shot_table_summary.css' %}">
+
   
 
   <link href="https://cdn.bokeh.org/bokeh/release/bokeh-3.8.2.min.css" rel="stylesheet">
