--- a/rov/templates/rov/partials/dsr_line_table.html
+++ b/rov/templates/rov/partials/dsr_line_table.html
@@ -4,11 +4,12 @@
                  <th class="sticky-col sticky-col-1"><input type="checkbox" id="mainDSRLInesCheckBox"></th>
                  <th class="sticky-col sticky-col-2" title="Line number">Line</th>
                  <th title="Planned points from RLPreplot">P</th>
-                 <th title="Total DSR records for this line">DSR</th>
                  <th title="Number of unique stations">Stn</th>
                  <th title="Number of unique nodes">Nodes</th>
                  <th title="Minimum station number">Stn Min</th>
                  <th title="Maximum station number">Stn Max</th>
+                 <th title="Easting SMA 95% coherence">σE95%</th>
+                 <th title="Northing SMA 95% coherence">σN95%</th>
                  <th title="ROV deployed points (TimeStamp present)">Dep</th>
                  <th title="ROV retrieved points (TimeStamp1 present)">Rec</th>
                  <th title="SM deployed count (Deployed = YES)">SM(D)</th>
