--- a/rov/templates/rov/partials/selected_line_qc_tabs.html
+++ b/rov/templates/rov/partials/selected_line_qc_tabs.html
@@ -107,7 +107,7 @@
   </div>
 
   <div class="tab-pane fade" id="pane-delta" role="tabpanel" aria-labelledby="tab-delta">
-    <div id="plot-delta" class="qc-plot-slot">Open tab to load…</div>
+    <div id="plot-delta" class="qc-plot-slot w-100 bokeh-light-scope" style="height: 100vh">Open tab to load…</div>
   </div>
 
   <div class="tab-pane fade" id="pane-xline" role="tabpanel" aria-labelledby="tab-xline">
