--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="{% static 'baseproject/css/dsr_single_line_table.css' %}">
   <link rel="stylesheet" href="{% static 'baseproject/css/members.css' %}">
   <link rel="stylesheet" href="{% static 'baseproject/css/shot_table_summary.css' %}">
+  <link rel="stylesheet" href="{% static 'baseproject/css/sps_table_summary.css' %}">
 
   
 
