--- a/source/templates/source/cards/source_production_card.html
+++ b/source/templates/source/cards/source_production_card.html
@@ -79,9 +79,7 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h5>Shot Data</h5>
-                    <div id="shot-table-container">
-                        <!-- full shot table or filtered data -->
-                    </div>
+                    {% include "source/partials/sps_table.html" %}
                 </div>
             </div>
 
